@@ -1,3 +1,9 @@
+bubba-backend (1.2.4.17) claire estelle; urgency=low
+
+  * adding more interface set funtions 
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 16:45:03 +0100
+
 bubba-backend (1.2.4.16) claire estelle; urgency=low
 
   * changing logic of change_distribution to allow multiple distributions,
